--- a/views/404.html
+++ b/views/404.html
@@ -76,7 +76,7 @@
 <body>
 
 <div class="container">
-  <a href="https://placeholder.com" class="brand"><img src="https://portalmybot.com/assets/badges/v1/badge_62.png" width="140" height="140"></a>
+  <a href="https://portalmybot.com/" class="brand"><img src="https://portalmybot.com/assets/badges/v1/badge_62.png" width="140" height="140"></a>
 
   <h2>404</h2>
   <h1>Página no encontrada.</h1>
