--- a/views/partials/message.ejs
+++ b/views/partials/message.ejs
@@ -1,4 +1,4 @@
-<li id="<%= message.id %>" class="collection-item avatar" style>
+<li id="<%= message.messageID %>" class="collection-item avatar" style>
     <img src="<%= message.avatarURL %>" alt="<%= message.author %>-avatar" class="circle"><span class="title" style="color: <%= message.colorName %>"><%= message.author %></span>
     <% if(message.attachmentURL) { %>
         <p><%- message.content %><<%= message.attachmentURL.endsWith('.mp4') ? 'video controls' : 'img' %> class="img-content" src="<%= message.attachmentURL %>"/></p>
