Fechas en mensajes + cambio forma obtener avatar

--- a/views/405.html
+++ b/views/405.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>405 | Página no encontrada.</title>
+  <title>405 | Método no permitido.</title>
 
   <style type="text/css">
     body {
